add jwt auth + fixes
